--- a/src/app/components/cuenta/cuenta.component.html
+++ b/src/app/components/cuenta/cuenta.component.html
@@ -35,7 +35,7 @@
     </tbody>
     <tfoot>
           <td>Somos tu hotel de confianza, HiTel ^-^</td>
-          <td><button class="btn btn-info" routerLink="/">Pagar</button>
+          <td><button class="btn btn-info" routerLink="/" (click)="postFactura()">Pagar</button>
   
    </tfoot>
   
