--- a/src/app/components/habitacion/habitacion.component.html
+++ b/src/app/components/habitacion/habitacion.component.html
@@ -3,7 +3,7 @@
     <div class="row gx-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
             <div class="text-center">
-                <h2 class="fw-bolder">Nugget Marica</h2>
+                <h2 class="fw-bolder">Hoteles</h2>
                 <p class="lead fw-normal text-muted mb-5">Mantente al día y conoce todas las habitaciones disponibles</p>
             </div>
         </div>
