--- a/src/app/components/hoteles/hoteles.component.scss
+++ b/src/app/components/hoteles/hoteles.component.scss
@@ -1,15 +1,19 @@
-.btn-circle-xl {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  width: 100px;
-  height: 100px;
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  line-height: 70px;
-  font-size: 1.3rem;
+body{
+  padding-top: 15px;
+  padding-bottom: 50px;
+  background-color:#0D0000;
+  position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+    
+    
+    
 }
+
+.fw-bolder{
+  margin-bottom: 25px;
+}
+
+
+
