--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -22,14 +22,14 @@
   border-color: transparent;
   font-family: 'Plus Jakarta Sans', sans-serif;
   font-weight: 800;
-  background-color: rgb(50, 70, 203);
+  background-color: #0D0000;
   color: #fff;
   margin: 3px;
   transition: all linear 0.5s;
 }
 
 .btn:hover {
-  background-color: rgb(100, 119, 240);
+  background-color: rgb(161, 60, 60);
 }
 
 .nav-link {
