--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -12,44 +12,14 @@
   
     <ul class="profile-social-links">
       <li>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="getUsuarioL()">Editar</button>    </li>
-      <li>
-        <button type="button" class="btn btn-danger" (click)="deleteUsuario(perfilModelGet._id)">Eliminar</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" (click)="deleteUsuario(perfilModelGet._id)" routerLink="/">Eliminar</button>
       </li>
       <li>
         <button type="button" class="btn btn-success" routerLink="/cuenta">Cuenta</button>
       </li>
    </ul>
   </aside>
-  
-  
-      <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-              <div class="mg-3">
-                  <label for="inputName" class="form-label">Nombre</label>
-                  <input type="text" id="inputName" class="form-control" name="nombre" #nombre="ngModel" [(ngModel)]="perfilModelGet.nombre">
-              </div>
-              <div class="mg-3">
-                  <label for="inputName" class="form-label">Email</label>
-                  <input type="text" id="inputName" class="form-control" name="email" #email="ngModel" [(ngModel)]="perfilModelGet.email">
-              </div>
-  
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" (click)="putUsuario()">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  
   
   </body>
   
