--- a/src/app/components/loader/loader.component.scss
+++ b/src/app/components/loader/loader.component.scss
@@ -1,3 +1,17 @@
+.body{
+    padding-top: 15px;
+    padding-bottom: 505px;
+    background-color:#0D0000;
+    position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+      
+      
+  }
+
+
+
 :host{ 
     display: block;
 }
@@ -21,8 +35,18 @@
 }
 
 .btn {
-    justify-content: center;
-    align-items: center;
-    margin-top: 40%;
-    font-size: 1.3rem;
+    border-color: transparent;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 800;
+    background-color: #292626;
+    color: #fff;
+    transition: all linear 0.5s;
+  }
+  
+  .btn:hover {
+    background-color: rgb(161, 60, 60);
+  }
+
+  .d-grid{
+    margin-top: 400px;
   }
