--- a/src/app/components/perfil/perfil.component.scss
+++ b/src/app/components/perfil/perfil.component.scss
@@ -1,20 +1,25 @@
 
 
 	body {
-	    color: #444;
-      background-color: gray;
-	    height: 92vh;
+	    color: #0D0000;
+      	background-image: url("https://images.unsplash.com/photo-1551081831-02459886c4c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80");
+		  background-position: center;
+		  background-size: cover;
+		  background-repeat:no-repeat ;
+		  max-width: 100%;
+		height: 92vh;
 
 	}
 
 	.profile-card{
+		color: white;
 		width: 300px;
-		border-radius: 2px;
+		border-radius: 25px;
 		overflow: hidden;
 		box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 		position: relative;
 		margin: auto;
-		background: rgba(255,255,255,1);
+		background: #0D0000;
 		top: 50%;
 		transform: translateY(-50%);
 
@@ -23,7 +28,7 @@
 	.profile-card header{
 		display: block;
 		position: relative;
-		background: rgba(255,255,255,1);
+		background: #0D0000;
 		text-align: center;
 		padding: 30px 0 20px;
 		z-index: 1;
@@ -55,7 +60,7 @@
 		background-image: linear-gradient(
 		    to bottom,
 		    rgba(255, 255, 255, 0) 0%,
-		    rgba(255, 255, 255, 1) 100%
+		    #f3c2c2 100%
 		);
 	}
 
