--- a/src/app/components/reservacion/reservacion.component.html
+++ b/src/app/components/reservacion/reservacion.component.html
@@ -1,13 +1,30 @@
-<div class="row gx-5">
 
-    <div class="col-lg-4 mb-5" *ngFor="let hab of reservacionModelGetIdH">
-
-        <div class="card h-100 shadow border-0">
-            <img class="card-img-top" src="https://images.e-tsw.com/_lib/vimages/Cancun/Hotels/Hard-Rock-Hotel-Cancun/Gallery/a-Cancun-Hard-Rock-Deluxe-Gold-King-DLXDBLCA.jpg" alt="...">
-            <div class="card-body p-4">
-                <div class="badge bg-primary bg-gradient rounded-pill mb-2">{{ hab.numeroDias }}</div>
-                <div class="badge bg-primary bg-gradient rounded-pill mb-2">{{ hab.idHabitacion }}</div>
-            </div>
+<div class="row gx-5 justify-content-center">
+    <div class="col-lg-8 col-xl-6">
+        <div class="text-center">
+            <h1>Reservación</h1>
         </div>
     </div>
-</div>
+    <div class="row gx-5 justify-content-center">
+  <div>
+    <div class="text-center">
+    <h2>Reserva</h2>
+  </div>
+  </div>
+  </div>
+  <div class="container px-5 my-5">
+  <table class="container">
+    <thead>
+      <tr>
+        <th><h1>Numero Días</h1></th>
+        <th><h1>Id habitación</h1></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let hab of reservacionModelGetIdH">
+        <td>Días:  {{ hab.numeroDias }}</td>
+        <td>ID: {{ hab.idHabitacion }}</td>
+      </tr>
+    </tbody>
+
+    </table>
