--- a/src/app/components/sign-up/sign-up.component.scss
+++ b/src/app/components/sign-up/sign-up.component.scss
@@ -3,6 +3,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
+.asdf{
+  background-color:#0D0000;
+  
+}
+
 .form-control {
   font-family: "Quicksand", sans-serif;
 }
@@ -16,7 +21,7 @@
   content: "";
   flex: 1;
   height: 1px;
-  background: #eee;
+  background: #0D0000;
 }
 .h-custom {
   height: calc(100% - 73px);
@@ -26,3 +31,28 @@
     height: 100%;
   }
 }
+
+.container{
+  background-color: #0D0000;
+  border-radius: 25px;
+  
+}
+
+.btn {
+  border-color: transparent;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 800;
+  background-color: #0D0000;
+  color: #fff;
+  margin: 3px;
+  transition: all linear 0.5s;
+  
+}
+
+.btn:hover {
+  background-color: rgb(161, 60, 60);
+}
+
+
+
+
