--- a/src/app/components/usuarios/usuarios.component.scss
+++ b/src/app/components/usuarios/usuarios.component.scss
@@ -1,20 +1,18 @@
 body{
   padding-top: 15px;
-  padding-bottom: 50px;
+  padding-bottom: 550px;
   background-color:#0D0000;
-  position: center center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;
-  background-size: cover;
-    
-    
-    
+  background-size: 500%;
+
 }
 
   .aa_h2{
     text-align: center;
+    color: white;
   }
-  
+
   .btn{
     margin-left: 50px;
     margin-bottom: 50px;
@@ -22,36 +20,43 @@ body{
 
   .form-control{
     margin-bottom: 50px;
-    
-    
+    background-color: #0D0000;
+
+
+
   }
 
-  
+table{
+  background-color: #0D0000;
+  position: absolute;
+  top: 35%;
+  left: 30%;
+}
 
   div.table-title {
-     display: block;
+    display: block;
     margin: auto;
     max-width: 600px;
     padding:5px;
     width: 100%;
   }
-  
+
   .table-title h3 {
-     color: #fafafa;
      font-size: 30px;
      font-weight: 400;
      font-style:normal;
      font-family: "Roboto", helvetica, arial, sans-serif;
      text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
      text-transform:uppercase;
+
   }
-  
-  
+
+
   /*** Table Styles **/
-  
+
   .table-fill {
-    background: white;
     border-radius:3px;
+    border:rgba(0, 0, 0, 0.1);
     border-collapse: collapse;
     height: 320px;
     margin: auto;
@@ -60,8 +65,9 @@ body{
     width: 100%;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     animation: float 5s infinite;
+
   }
-   
+
   th {
     color:#D5DDE5;;
     background:#1b1e24;
@@ -73,17 +79,18 @@ body{
     text-align:left;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     vertical-align:middle;
+
   }
-  
+
   th:first-child {
     border-top-left-radius:3px;
   }
-   
+
   th:last-child {
     border-top-right-radius:3px;
     border-right:none;
   }
-    
+
   tr {
     border-top: 1px solid #C1C3D1;
     border-bottom: 1px solid #C1C3D1;
@@ -92,39 +99,38 @@ body{
     font-weight:normal;
     text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
   }
-   
+
   tr:hover td {
     background:#4E5066;
-    color:#FFFFFF;
+    color:#0D0000;
     border-top: 1px solid #22262e;
   }
-   
+
   tr:first-child {
     border-top:none;
   }
-  
+
   tr:last-child {
     border-bottom:none;
   }
-   
+
   tr:nth-child(odd) td {
-    background:#EBEBEB;
+    background:#0D0000;
   }
-   
+
   tr:nth-child(odd):hover td {
     background:#4E5066;
   }
-  
+
   tr:last-child td:first-child {
     border-bottom-left-radius:3px;
   }
-   
+
   tr:last-child td:last-child {
     border-bottom-right-radius:3px;
   }
-   
+
   td {
-    background:#FFFFFF;
     padding:20px;
     text-align:left;
     vertical-align:middle;
@@ -133,36 +139,49 @@ body{
     text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
     border-right: 1px solid #C1C3D1;
   }
-  
+
   td:last-child {
     border-right: 0px;
   }
-  
+
   th.text-left {
     text-align: left;
   }
-  
+
   th.text-center {
     text-align: center;
   }
-  
+
   th.text-right {
     text-align: right;
   }
-  
+
   td.text-left {
     text-align: left;
   }
-  
+
   td.text-center {
     text-align: center;
   }
-  
+
   td.text-right {
     text-align: right;
   }
 
-  .container22{
-    margin-top: 100px;
+
+  .inputserch{
+    position:absolute;
+    left: 40%;
+
+    display: inline-block;
+    transition: 0.5s;
+    font-size:20px;
+    background-color:transparent !important;
+    width: 300px;
+    padding-left: 10px;
   }
-  
+
+  tfoot{
+    position: center;
+
+  }
