--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -3,7 +3,7 @@
   <aside class="profile-card">
   
     <header>
-      <a href="http://ali.shahab.pk">
+      <a>
         <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn.onlinewebfonts.com%2Fsvg%2Fimg_206976.png&f=1&nofb=1">
       </a>
       <h1>{{perfilModelGet.nombre}}</h1>
@@ -11,15 +11,26 @@
     </header>
   
     <ul class="profile-social-links">
-      <li>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-danger" (click)="deleteUsuario(perfilModelGet._id)" routerLink="/">Eliminar</button>
-      </li>
-      <li>
-        <button type="button" class="btn btn-success" routerLink="/cuenta">Cuenta</button>
-      </li>
-   </ul>
-  </aside>
+  <body>
   
-  </body>
+    <aside class="profile-card">
   
+      <header>
+        <a href="http://ali.shahab.pk">
+          <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn.onlinewebfonts.com%2Fsvg%2Fimg_206976.png&f=1&nofb=1">
+        </a>
+        <h1>{{perfilModelGet.nombre}}</h1>
+        <h2>{{perfilModelGet.email}}</h2>
+      </header>
+  
+      <ul class="profile-social-links">
+        <li>
+          <button type="button" class="btn btn-danger" (click)="deleteUsuario(perfilModelGet._id)" routerLink="/">Eliminar</button>
+        </li>
+        <li>
+          <button type="button" class="btn btn-success" routerLink="/cuenta">Cuenta</button>
+        </li>
+     </ul>
+    </aside>
+  
+    </body>
